it's not birthblock

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-    "name": "birthblock-nft",
+    "name": "tokenGarden-nft",
     "version": "0.1.0",
-    "description": "Solidity for Birthblock",
+    "description": "Solidity for TokenGarden",
     "main": "index.js",
     "scripts": {
         "test": "npx hardhat test",
-        "deploy": "HARDHAT_NETWORK=rinkeby ts-node scripts/deploy.ts"
+        "deploy": "HARDHAT_NETWORK=rinkeby ts-node scripts/deploy.ts",
+        "prod-deploy": "HARDHAT_NETWORK=mainnet ts-node scripts/deploy.ts",
+        "prod-verify": "HARDHAT_NETWORK=mainnet ts-node scripts/verify.ts"
     },
     "author": "Brenner Spear",
     "license": "MT",
