--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "tokenGarden-nft",
     "version": "0.1.0",
+    "license": "GPL-3.0-or-later",
     "description": "Solidity for TokenGarden",
     "main": "index.js",
     "scripts": {
